--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,12 @@
+html,
+body,
+.app {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .loadingCubeSet {
   width: 73px;
   height: 73px;
